# slot_attention

./: .gitignore  README.md  download_clevr.sh  pyproject.toml  run.sh  slot_attention
slot_attention/: data.py  method.py  model.py  params.py  train.py  train_test.py  utils.py
